# ableton-ai-stemcell-skill

./: pyproject.toml
references/: dance-gear-fingerprints.md  house-vocal-chop-craft.md
src/stemcell/: __init__.py  analyze.py  cli.py  ctx.py  drums.py  ingest.py  melody.py  report.py  selftest.py  separate.py  transcribe.py  vocalchop.py
tests/: test_selftest.py  test_vocalchop.py
